[gd_scene load_steps=9 format=3 uid="uid://iab4qefc8cxd"]

[ext_resource type="Script" uid="uid://ptku4ho4abt6" path="res://entities/planter_box/planter_box.gd" id="1_xhio6"]
[ext_resource type="Texture2D" uid="uid://sb0wruthra3o" path="res://entities/planter_box/planter_box_01.png" id="2_db0bv"]
[ext_resource type="PackedScene" uid="uid://vi8h1eahwmlx" path="res://components/health_component/health_component.tscn" id="3_lotvn"]
[ext_resource type="PackedScene" uid="uid://bna0fj38m6n6t" path="res://components/sprite_component/sprite_component.tscn" id="4_db0bv"]
[ext_resource type="PackedScene" uid="uid://b50ykoc834ds8" path="res://components/interact_component/interact_component.tscn" id="5_db0bv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mr2yn"]
atlas = ExtResource("2_db0bv")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_p60jo"]
atlas = ExtResource("2_db0bv")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_lotvn"]
atlas = ExtResource("2_db0bv")
region = Rect2(0, 0, 18, 18)

[node name="PlanterBox" type="Node2D"]
script = ExtResource("1_xhio6")
texture_normal = SubResource("AtlasTexture_mr2yn")
texture_highlighted = SubResource("AtlasTexture_p60jo")
max_health = 10

[node name="HealthComponent" parent="." instance=ExtResource("3_lotvn")]

[node name="SpriteComponent" parent="." instance=ExtResource("4_db0bv")]
position = Vector2(0, -5)

[node name="DebugSprite" type="Sprite2D" parent="SpriteComponent"]
visible = false
texture = SubResource("AtlasTexture_lotvn")

[node name="InteractComponent" parent="." instance=ExtResource("5_db0bv")]
visible = false
offset_left = 11.0
offset_top = -14.0
offset_right = 11.0
offset_bottom = -14.0
